Create logistic regression model

--- a/noteBooks/modelBuilding.ipynb
+++ b/noteBooks/modelBuilding.ipynb
@@ -614,6 +614,75 @@
     "from sklearn.ensemble import RandomForestClassifier\n",
     "from sklearn.svm import SVC"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 54,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from sklearn.metrics import accuracy_score, f1_score, precision_score, recall_score\n",
+    "\n",
+    "def training_scores(y_act, y_pred):\n",
+    "    acc = round(accuracy_score(y_act, y_pred), 3)\n",
+    "    pr = round(precision_score(y_act, y_pred), 3)\n",
+    "    rec = round(recall_score(y_act, y_pred), 3)\n",
+    "    f1 = round(f1_score(y_act, y_pred), 3)\n",
+    "    print(f'Training Scores:\\n\\tAccuracy = {acc}\\n\\tPrecision = {pr}\\n\\tRecall = {rec}\\n\\tF1-Score = {f1}')\n",
+    "    \n",
+    "def validation_scores(y_act, y_pred):\n",
+    "    acc = round(accuracy_score(y_act, y_pred), 3)\n",
+    "    pr = round(precision_score(y_act, y_pred), 3)\n",
+    "    rec = round(recall_score(y_act, y_pred), 3)\n",
+    "    f1 = round(f1_score(y_act, y_pred), 3)\n",
+    "    print(f'Testing Scores:\\n\\tAccuracy = {acc}\\n\\tPrecision = {pr}\\n\\tRecall = {rec}\\n\\tF1-Score = {f1}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Logistic Regression"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 59,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Scores:\n",
+      "\tAccuracy = 0.94\n",
+      "\tPrecision = 0.915\n",
+      "\tRecall = 0.97\n",
+      "\tF1-Score = 0.942\n",
+      "Testing Scores:\n",
+      "\tAccuracy = 0.878\n",
+      "\tPrecision = 0.716\n",
+      "\tRecall = 0.855\n",
+      "\tF1-Score = 0.78\n"
+     ]
+    }
+   ],
+   "source": [
+    "lr = LogisticRegression()\n",
+    "lr.fit(vectorized_x_train_smote, y_train_smote)\n",
+    "\n",
+    "y_train_pred = lr.predict(vectorized_x_train_smote)\n",
+    "y_test_pred = lr.predict(vectorized_x_test)\n",
+    "training_scores(y_train_smote, y_train_pred)\n",
+    "validation_scores(y_test, y_test_pred)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
