Create navie bayers model

--- a/noteBooks/modelBuilding.ipynb
+++ b/noteBooks/modelBuilding.ipynb
@@ -678,11 +678,50 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "### Naive Bayers"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 60,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Scores:\n",
+      "\tAccuracy = 0.909\n",
+      "\tPrecision = 0.87\n",
+      "\tRecall = 0.961\n",
+      "\tF1-Score = 0.913\n",
+      "Testing Scores:\n",
+      "\tAccuracy = 0.876\n",
+      "\tPrecision = 0.695\n",
+      "\tRecall = 0.905\n",
+      "\tF1-Score = 0.787\n"
+     ]
+    }
+   ],
+   "source": [
+    "mnb = MultinomialNB()\n",
+    "mnb.fit(vectorized_x_train_smote, y_train_smote)\n",
+    "\n",
+    "y_train_pred = mnb.predict(vectorized_x_train_smote)\n",
+    "y_test_pred = mnb.predict(vectorized_x_test)\n",
+    "training_scores(y_train_smote, y_train_pred)\n",
+    "validation_scores(y_test, y_test_pred)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Decision Tree"
+   ]
   }
  ],
  "metadata": {
