Create Decision tree model

--- a/noteBooks/modelBuilding.ipynb
+++ b/noteBooks/modelBuilding.ipynb
@@ -722,6 +722,38 @@
    "source": [
     "### Decision Tree"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 61,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Scores:\n",
+      "\tAccuracy = 1.0\n",
+      "\tPrecision = 1.0\n",
+      "\tRecall = 1.0\n",
+      "\tF1-Score = 1.0\n",
+      "Testing Scores:\n",
+      "\tAccuracy = 0.829\n",
+      "\tPrecision = 0.673\n",
+      "\tRecall = 0.631\n",
+      "\tF1-Score = 0.651\n"
+     ]
+    }
+   ],
+   "source": [
+    "dt = DecisionTreeClassifier()\n",
+    "dt.fit(vectorized_x_train_smote, y_train_smote)\n",
+    "\n",
+    "y_train_pred = dt.predict(vectorized_x_train_smote)\n",
+    "y_test_pred = dt.predict(vectorized_x_test)\n",
+    "training_scores(y_train_smote, y_train_pred)\n",
+    "validation_scores(y_test, y_test_pred)"
+   ]
   }
  ],
  "metadata": {
