Create random forest model

--- a/noteBooks/modelBuilding.ipynb
+++ b/noteBooks/modelBuilding.ipynb
@@ -754,6 +754,45 @@
     "training_scores(y_train_smote, y_train_pred)\n",
     "validation_scores(y_test, y_test_pred)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Random Forest"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Scores:\n",
+      "\tAccuracy = 1.0\n",
+      "\tPrecision = 1.0\n",
+      "\tRecall = 1.0\n",
+      "\tF1-Score = 1.0\n",
+      "Testing Scores:\n",
+      "\tAccuracy = 0.87\n",
+      "\tPrecision = 0.76\n",
+      "\tRecall = 0.711\n",
+      "\tF1-Score = 0.735\n"
+     ]
+    }
+   ],
+   "source": [
+    "rf = RandomForestClassifier()\n",
+    "rf.fit(vectorized_x_train_smote, y_train_smote)\n",
+    "\n",
+    "y_train_pred = rf.predict(vectorized_x_train_smote)\n",
+    "y_test_pred = rf.predict(vectorized_x_test)\n",
+    "training_scores(y_train_smote, y_train_pred)\n",
+    "validation_scores(y_test, y_test_pred)"
+   ]
   }
  ],
  "metadata": {
