Create support vector machine

--- a/noteBooks/modelBuilding.ipynb
+++ b/noteBooks/modelBuilding.ipynb
@@ -793,6 +793,45 @@
     "training_scores(y_train_smote, y_train_pred)\n",
     "validation_scores(y_test, y_test_pred)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Support Vector Machine"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Training Scores:\n",
+      "\tAccuracy = 0.978\n",
+      "\tPrecision = 0.96\n",
+      "\tRecall = 0.997\n",
+      "\tF1-Score = 0.978\n",
+      "Testing Scores:\n",
+      "\tAccuracy = 0.888\n",
+      "\tPrecision = 0.762\n",
+      "\tRecall = 0.813\n",
+      "\tF1-Score = 0.786\n"
+     ]
+    }
+   ],
+   "source": [
+    "svm = SVC()\n",
+    "svm.fit(vectorized_x_train_smote, y_train_smote)\n",
+    "\n",
+    "y_train_pred = svm.predict(vectorized_x_train_smote)\n",
+    "y_test_pred = svm.predict(vectorized_x_test)\n",
+    "training_scores(y_train_smote, y_train_pred)\n",
+    "validation_scores(y_test, y_test_pred)"
+   ]
   }
  ],
  "metadata": {
