Save svm model in a file

--- a/noteBooks/modelBuilding.ipynb
+++ b/noteBooks/modelBuilding.ipynb
@@ -832,6 +832,18 @@
     "training_scores(y_train_smote, y_train_pred)\n",
     "validation_scores(y_test, y_test_pred)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pickle\n",
+    "\n",
+    "with open('../Static/model.pickle', 'wb') as file:\n",
+    "    pickle.dump(svm, file)"
+   ]
   }
  ],
  "metadata": {
