Predicting whether the comment is a positive comment or a negative comment

--- a/noteBooks/prediction_pipeline.ipynb
+++ b/noteBooks/prediction_pipeline.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 41,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -10,12 +10,14 @@
     "import pandas as pd\n",
     "import re\n",
     "import string\n",
-    "import pickle"
+    "import pickle\n",
+    "from nltk.stem import PorterStemmer\n",
+    "import os\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 23,
+   "execution_count": 42,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -27,29 +29,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 43,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "with open('../Static/model.pickle', 'rb') as f:\n",
+    "    model = pickle.load(f)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 44,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "with open('../static/model/corpora/stopwords/english', 'r') as file:\n",
+    "with open('../Static/model/corpora/stopwords/english', 'r') as file:\n",
     "    sw = file.read().splitlines()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 45,
    "metadata": {},
    "outputs": [],
    "source": [
     "\n",
-    "vocab = pd.read_csv('../static/model/vocabulary.txt', header=None)\n",
+    "vocab = pd.read_csv('../Static/model/vocabulary.txt', header=None)\n",
     "tokens = vocab[0].tolist()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 46,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -59,7 +71,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 47,
    "metadata": {},
    "outputs": [
     {
@@ -68,7 +80,7 @@
      "text": [
       "<>:6: SyntaxWarning: invalid escape sequence '\\d'\n",
       "<>:6: SyntaxWarning: invalid escape sequence '\\d'\n",
-      "C:\\Users\\ASUS\\AppData\\Local\\Temp\\ipykernel_40140\\869911806.py:6: SyntaxWarning: invalid escape sequence '\\d'\n",
+      "C:\\Users\\ASUS\\AppData\\Local\\Temp\\ipykernel_42620\\869911806.py:6: SyntaxWarning: invalid escape sequence '\\d'\n",
       "  data[\"tweet\"] = data['tweet'].str.replace('\\d+', '', regex=True)\n"
      ]
     }
@@ -87,33 +99,65 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def vectorizer(ds, vocabulary):\n",
+    "    vectorized_lst = []\n",
+    "    \n",
+    "    for sentence in ds:\n",
+    "        sentence_lst = np.zeros(len(vocabulary))\n",
+    "        \n",
+    "        for i in range(len(vocabulary)):\n",
+    "            if vocabulary[i] in sentence.split():\n",
+    "                sentence_lst[i] = 1\n",
+    "                \n",
+    "        vectorized_lst.append(sentence_lst)\n",
+    "        \n",
+    "    vectorized_lst_new = np.asarray(vectorized_lst, dtype=np.float32)\n",
+    "    \n",
+    "    return vectorized_lst_new"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 49,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "def get_prediction(vectorized_text):\n",
+    "    prediction = model.predict(vectorized_text)\n",
+    "    if prediction == 1:\n",
+    "        return 'negative'\n",
+    "    else:\n",
+    "        return 'positive'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 50,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0    great producti like\n",
-       "Name: tweet, dtype: object"
+       "'negative'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 50,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "text = 'great product....I like it'\n",
-    "preprocessed_text =preprocessing(text)\n",
-    "preprocessed_text"
+    "txt = \"Its very  bad...\"\n",
+    "preprocessed_txt = preprocessing(txt)\n",
+    "vectorized_txt = vectorizer(preprocessed_txt, tokens)\n",
+    "prediction = get_prediction(vectorized_txt)\n",
+    "prediction"
    ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
   }
  ],
  "metadata": {
