--- a/noteBooks/downloadDataSet.ipynb
+++ b/noteBooks/downloadDataSet.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -22,7 +22,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 27,
    "metadata": {},
    "outputs": [
     {
@@ -31,7 +31,7 @@
        "{'username': 'avishkam20232819', 'key': '000adf7d6140f54d1685da4232614f82'}"
       ]
      },
-     "execution_count": 15,
+     "execution_count": 27,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -42,50 +42,36 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Collecting kaggle\n",
-      "  Using cached kaggle-1.6.17-py3-none-any.whl\n",
-      "Requirement already satisfied: six>=1.10 in d:\\sentimentanalysisproject\\env\\lib\\site-packages (from kaggle) (1.17.0)\n",
-      "Collecting certifi>=2023.7.22 (from kaggle)\n",
-      "  Downloading certifi-2025.1.31-py3-none-any.whl.metadata (2.5 kB)\n",
-      "Requirement already satisfied: python-dateutil in d:\\sentimentanalysisproject\\env\\lib\\site-packages (from kaggle) (2.9.0.post0)\n",
-      "Collecting requests (from kaggle)\n",
-      "  Using cached requests-2.32.3-py3-none-any.whl.metadata (4.6 kB)\n",
-      "Collecting tqdm (from kaggle)\n",
-      "  Using cached tqdm-4.67.1-py3-none-any.whl.metadata (57 kB)\n",
-      "Collecting python-slugify (from kaggle)\n",
-      "  Using cached python_slugify-8.0.4-py2.py3-none-any.whl.metadata (8.5 kB)\n",
-      "Collecting urllib3 (from kaggle)\n",
-      "  Downloading urllib3-2.3.0-py3-none-any.whl.metadata (6.5 kB)\n",
-      "Collecting bleach (from kaggle)\n",
-      "  Downloading bleach-6.2.0-py3-none-any.whl.metadata (30 kB)\n",
-      "Collecting webencodings (from bleach->kaggle)\n",
-      "  Using cached webencodings-0.5.1-py2.py3-none-any.whl.metadata (2.1 kB)\n",
-      "Collecting text-unidecode>=1.3 (from python-slugify->kaggle)\n",
-      "  Using cached text_unidecode-1.3-py2.py3-none-any.whl.metadata (2.4 kB)\n",
-      "Collecting charset-normalizer<4,>=2 (from requests->kaggle)\n",
-      "  Downloading charset_normalizer-3.4.1-cp312-cp312-win_amd64.whl.metadata (36 kB)\n",
-      "Collecting idna<4,>=2.5 (from requests->kaggle)\n",
-      "  Downloading idna-3.10-py3-none-any.whl.metadata (10 kB)\n",
-      "Requirement already satisfied: colorama in d:\\sentimentanalysisproject\\env\\lib\\site-packages (from tqdm->kaggle) (0.4.6)\n",
-      "Downloading certifi-2025.1.31-py3-none-any.whl (166 kB)\n",
-      "Downloading bleach-6.2.0-py3-none-any.whl (163 kB)\n",
-      "Using cached python_slugify-8.0.4-py2.py3-none-any.whl (10 kB)\n",
-      "Using cached requests-2.32.3-py3-none-any.whl (64 kB)\n",
-      "Downloading urllib3-2.3.0-py3-none-any.whl (128 kB)\n",
-      "Using cached tqdm-4.67.1-py3-none-any.whl (78 kB)\n",
-      "Downloading charset_normalizer-3.4.1-cp312-cp312-win_amd64.whl (102 kB)\n",
-      "Downloading idna-3.10-py3-none-any.whl (70 kB)\n",
-      "Using cached text_unidecode-1.3-py2.py3-none-any.whl (78 kB)\n",
-      "Using cached webencodings-0.5.1-py2.py3-none-any.whl (11 kB)\n",
-      "Installing collected packages: webencodings, text-unidecode, urllib3, tqdm, python-slugify, idna, charset-normalizer, certifi, bleach, requests, kaggle\n",
-      "Successfully installed bleach-6.2.0 certifi-2025.1.31 charset-normalizer-3.4.1 idna-3.10 kaggle-1.6.17 python-slugify-8.0.4 requests-2.32.3 text-unidecode-1.3 tqdm-4.67.1 urllib3-2.3.0 webencodings-0.5.1\n"
+      "Requirement already satisfied: kaggle in c:\\users\\asus\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (1.6.17)\n",
+      "Requirement already satisfied: six>=1.10 in c:\\users\\asus\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from kaggle) (1.16.0)\n",
+      "Requirement already satisfied: certifi>=2023.7.22 in c:\\users\\asus\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from kaggle) (2024.8.30)\n",
+      "Requirement already satisfied: python-dateutil in c:\\users\\asus\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from kaggle) (2.9.0.post0)\n",
+      "Requirement already satisfied: requests in c:\\users\\asus\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from kaggle) (2.32.3)\n",
+      "Requirement already satisfied: tqdm in c:\\users\\asus\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from kaggle) (4.67.1)\n",
+      "Requirement already satisfied: python-slugify in c:\\users\\asus\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from kaggle) (8.0.4)\n",
+      "Requirement already satisfied: urllib3 in c:\\users\\asus\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from kaggle) (2.2.3)\n",
+      "Requirement already satisfied: bleach in c:\\users\\asus\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from kaggle) (6.1.0)\n",
+      "Requirement already satisfied: webencodings in c:\\users\\asus\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from bleach->kaggle) (0.5.1)\n",
+      "Requirement already satisfied: text-unidecode>=1.3 in c:\\users\\asus\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from python-slugify->kaggle) (1.3)\n",
+      "Requirement already satisfied: charset-normalizer<4,>=2 in c:\\users\\asus\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests->kaggle) (3.3.2)\n",
+      "Requirement already satisfied: idna<4,>=2.5 in c:\\users\\asus\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from requests->kaggle) (3.8)\n",
+      "Requirement already satisfied: colorama in c:\\users\\asus\\appdata\\local\\programs\\python\\python312\\lib\\site-packages (from tqdm->kaggle) (0.4.6)\n"
+     ]
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "\n",
+      "[notice] A new release of pip is available: 25.0 -> 25.0.1\n",
+      "[notice] To update, run: python.exe -m pip install --upgrade pip\n"
      ]
     }
    ],
@@ -95,7 +81,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -106,7 +92,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -117,7 +103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -134,19 +120,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 32,
    "metadata": {},
    "outputs": [],
    "source": [
     "import zipfile\n",
     "with zipfile.ZipFile('../dataset/sentiment-analysis-dataset.zip', 'r') as zip_ref:\n",
-    "    zip_ref.extractall('../dataset')"
+    "    zip_ref.extractall('../datset/')"
    ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "env",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
